--- a/.github/workflows/maven_tests.yml
+++ b/.github/workflows/maven_tests.yml
@@ -3,10 +3,10 @@ name: Build and test (using maven)
 #on: [push, pull_request]
 #on: [pull_request]
 on:
-  # Trigger the workflow on push to master (ignoring .md only changes)
+  # Trigger the workflow on push to main (ignoring .md only changes)
   push:
     branches:
-      - master
+      - main
     paths-ignore:
       - '**.md'
 
@@ -32,10 +32,8 @@ jobs:
       matrix:
         ## Different OSs have different default line-endings -- test on all combinations.
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        ## Different JDK versions have different implementations etc. -- test on all combinations (ideally 8 to latest).
-        ### exclude pre-8 (min development version jdk8)
-        ### exclude post-12 (changes to jdk causes reflection tests to fail due to added methods #1701 )
-        jdk: [ 8,9,10,11,12,13,14,15,16 ]
+        ## mvel3 requires 17. javaparser-mvel test fails with 21. So only 17 is fine.
+        jdk: [ 17 ]
     env:
       OS: ${{ matrix.os }}
       JDK: ${{ matrix.jdk }}
@@ -45,13 +43,13 @@ jobs:
     steps:
       ## Checkout the current version of the code from the repo.
       - name: Checkout latest code
-        uses: actions/checkout@v3.6.0
+        uses: actions/checkout@v4
         with:
           fetch-depth: "0"
 
       ## Setup the specified version of Java (includes maven/gradle).
       - name: Set up JDK ${{ matrix.jdk }}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'              # v2 requires explicitly stating the distribution - `zulu` and `adopt` supported at time of writing
           java-version: ${{ matrix.jdk }}   # Use matrix to select which JDK level to use
@@ -64,7 +62,7 @@ jobs:
       ## Use a cache to reduce the build/test times (avoids having to download dependencies on EVERY run).
       ### https://help.github.com/en/actions/language-and-framework-guides/building-and-testing-java-with-maven#caching-dependencies
       - name: Cache Maven packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -84,7 +82,7 @@ jobs:
 
 
       - name: CodeCov - JavaParser Core
-        uses: codecov/codecov-action@v3.1.4
+        uses: codecov/codecov-action@v4
         timeout-minutes: 10
         with:
           files: javaparser-core-testing/target/site/jacoco/jacoco.xml,javaparser-core-testing-bdd/target/site/jacoco/jacoco.xml
@@ -94,7 +92,7 @@ jobs:
           env_vars: OS,JDK
 
       - name: CodeCov - JavaParser Symbol Solver
-        uses: codecov/codecov-action@v3.1.4
+        uses: codecov/codecov-action@v4
         timeout-minutes: 10
         with:
           file: javaparser-symbol-solver-testing/target/site/jacoco/jacoco.xml
@@ -109,11 +107,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout latest code
-        uses: actions/checkout@v3.6.0
+        uses: actions/checkout@v4
         with:
           fetch-depth: "0"
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'zulu'
