Prepare for alpha1 release (#14)
* update release GHA for github release

* update to SNAPSHOT for release-plugin

* no need to copy readme on release

* remove GPG for simplicity for now

* remove codecov and appveyor config as we are not using them

* fix GHA permission. fix glob pattern. removed unused scripts

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <groupId>org.mvel.javaparser</groupId>
     <artifactId>javaparser-parent</artifactId>
     <packaging>pom</packaging>
-    <version>3.25.5-mvel3-1</version>
+    <version>3.25.5-mvel3-1-SNAPSHOT</version>
 
     <name>javaparser-parent</name>
     <url>https://github.com/mvel/javaparser-mvel</url>
@@ -255,10 +255,11 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>3.0.1</version>
                     <configuration>
+                        <!-- Tag format: 3.25.5-mvel3-1 (just the version) -->
+                        <tagNameFormat>@{project.version}</tagNameFormat>
                         <!-- When updating versions during release, synchronise versions of sub-modules with the parent-pom. -->
                         <autoVersionSubmodules>true</autoVersionSubmodules>
-                        <!-- During release:prepare, update the readme (via the "run-release" profile) and add it to git. -->
-                        <preparationGoals>-Prun-release clean verify scm:add scm:checkin</preparationGoals>
+                        <preparationGoals>clean verify</preparationGoals>
                         <!-- During release:perform, enable the release-specific profiles -->
                         <releaseProfiles>run-release</releaseProfiles>
                         <!-- Disable pushing of changes (i.e. false, for local testing) -->
@@ -453,46 +454,6 @@
             <id>run-release</id>
             <build>
                 <plugins>
-                    <!-- Update the readme with the new version number, but only when compiling a new release. -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>copy-readme</id>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.basedir}</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${project.basedir}/doc</directory>
-                                            <includes>
-                                                <include>readme.md</include>
-                                            </includes>
-                                            <filtering>true</filtering>
-                                        </resource>
-                                    </resources>
-                                    <encoding>${project.build.sourceEncoding}</encoding>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <!-- Commit the updated readme file to the repo.  -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-scm-plugin</artifactId>
-                        <configuration>
-                            <includes>readme.md</includes>
-                            <message>[maven-release-plugin] update readme</message>
-                            <!-- disabled here, as it will be pushed separately -->
-                            <!-- (either once the release has finished being prepared, or manually) -->
-                            <pushChanges>false</pushChanges>
-                        </configuration>
-                    </plugin>
-
                     <!-- Source plugin - used to include source code within the release JAR -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -517,29 +478,6 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <!-- GPG plugin - used to sign the release JAR before pushing to OSSRH -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.1.0</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                                <configuration>
-                                    <!-- Prevent `gpg` from using pinentry programs -->
-                                    <gpgArguments>
-                                        <arg>--pinentry-mode</arg>
-                                        <arg>loopback</arg>
-                                    </gpgArguments>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
